# seantauber

./: .env.example  .env.template  .env.test.template  .gitignore  README.md  README.template.md  README.test.01.md  README.test.02.md  README.test.md  crew.py  diagnosis.md  dump.rdb  hello.py  main.py  pipeline_analysis.md  pyproject.toml  readme.test.md  requirements.txt  update_readme.py
agents/: __init__.py  archive_agent.py  base_agent.py  consensus_agents.py  content_extractor.py  curation_agent.py  editor_agent.py  fetching_agent.py  newsletter_monitor.py  orchestrator.py  processing_agent.py  readme_generator.py  readme_updater_agent.py  repository_curator.py  topic_analyzer.py  triaging_agent.py
config/: agents.yaml  config_manager.py  logging_config.py  logging_config.yaml  pipeline_config.yaml  tasks.yaml  taxonomy.yaml
db/: __init__.py  chroma.sqlite3  connection.py  database.py  github_repos.db  migrations.py  queue.py
dev_docs/: agent_guidelines.md  agent_task_prompt.md  architecture.md  cleanup_plan.md  component_testing.md  data_storage_plan.md  database_schema.md  development_norms.md  implementation_plan.md  implementation_prompt.md  issues_and_plan.md  kanban.md  library_implementation.md  llm_categorization.md  multi_agent_plan.md  multi_agent_plan_kanban.md  mvp_issues.md  mvp_plan.md  mvp_system_architecture.md  oauth_setup.md  pipeline_documentation.md  prd.md  production_implementation_plan.md  project_plan.md  project_review_findings.md  project_review_plan.md  project_status.md  refactoring_plan.md  requirements.md  setup_guide.md  (+3 more)
(+70 files in other folders)
